# treasure_hunt

./: .gitignore  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements.txt
docker/database/: docker-compose.yaml
documentation/postmancollection-export/: treasure_hunt.postman_collection.json
treasure_hunt/: example.envi
treasure_hunt/apps/game/: urls.py
treasure_hunt/apps/game/migrations/: 0001_initial.py
treasure_hunt/apps/game/models/: __init__.py  playertreasure_model.py  trade_model.py  treasure_model.py
treasure_hunt/apps/game/serializers/: __init__.py  game_serializer.py
treasure_hunt/apps/game/views/: __init__.py  game_views.py
treasure_hunt/apps/user/: apps.py  urls.py
treasure_hunt/apps/user/admin/: __init__.py  user_admin.py
treasure_hunt/apps/user/helper/: __init__.py  expire_account_activation_link_helper.py  expire_forget_password_token_helper.py
treasure_hunt/apps/user/migrations/: 0001_initial.py
treasure_hunt/apps/userprofile/: models.py  urls.py  views.py
treasure_hunt/server/: urls.py
treasure_hunt/server/celery/: celery.py
treasure_hunt/server/settings/: __init__.py  application_setting.py  auth_settings.py  base_setting.py  cache_settings.py  celery_setting.py  databasecofig_setting.py  emailconfig_setting.py  filestorage_setting.py  middleware_setting.py  restframework_setting.py
treasure_hunt/templates/auth/: activation_success.html  new_userRegister.html
treasure_hunt/utils/: generate_random_secret_util.py
treasure_hunt/utils/paginations/: __init__.py  pagination.py
(+28 files in other folders)
